@@ -36,7 +36,7 @@
 
 
 // curses on Solaris
-#ifdef HAVE_CURSES_H
+#if (defined(HAVE_CURSES_H) && !defined(WIN32))
 #define NOMACROS
 #include <curses.h>
 
@@ -73,7 +73,10 @@ inline int cr_waddstr(WINDOW* w, const char* str) {
 // assume pdcurses on Windows without ncurses, or if we have xcurses.h
 #if (defined(WIN32) && !defined(HAVE_NCURSES_H)) || defined(HAVE_XCURSES_H)
 
-#define HAVE_PROTO
+#ifndef HAVE_PROTO
+#  define HAVE_PROTO
+#endif
+
 #ifdef HAVE_XCURSES_H
 #  define XCURSES
 #  include <xcurses.h>
@@ -114,12 +117,14 @@ inline int pd_waddstr(WINDOW* w, const char* str) {
 }
 #define waddstr(W, C) pd_waddstr(W, C)
 
+#ifdef XCURSES
 inline int pd_endwin() {
   int i = endwin();
   XCursesExit();
   return i;
 }
 #define endwin pd_endwin
+#endif // XCURSES
 
 inline int wresize(WINDOW* w, int lines, int cols) {
   return (resize_window(w, lines, cols) != NULL);
@@ -127,6 +132,10 @@ inline int wresize(WINDOW* w, int lines, int cols) {
 
 inline int resizeterm(int lines, int cols) {
   return resize_term(lines, cols);
+}
+
+inline void use_default_colors() {
+  return;
 }
 
 #endif // pdcurses
